compiler-theory/output/MapParserParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MapParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MapParserParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		MAP=10, FB=11, LB=12, COMMA=13, EQUAL=14, NEW=15, HASHMAP=16, LP=17, RP=18, 
		SEMICOLON=19, IDENTIFIER=20, WS=21;
	public const int
		RULE_map = 0, RULE_fb1 = 1, RULE_datatype1 = 2, RULE_comma1 = 3, RULE_datatype2 = 4, 
		RULE_lb1 = 5, RULE_name = 6, RULE_ravno = 7, RULE_new = 8, RULE_hashmap = 9, 
		RULE_fb2 = 10, RULE_datatype3 = 11, RULE_comma2 = 12, RULE_datatype4 = 13, 
		RULE_lb2 = 14, RULE_lp = 15, RULE_rp = 16, RULE_semicolon = 17, RULE_dataType = 18;
	public static readonly string[] ruleNames = {
		"map", "fb1", "datatype1", "comma1", "datatype2", "lb1", "name", "ravno", 
		"new", "hashmap", "fb2", "datatype3", "comma2", "datatype4", "lb2", "lp", 
		"rp", "semicolon", "dataType"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Int'", "'String'", "'Bool'", "'Float'", "'Byte'", "'Short'", "'Long'", 
		"'Boolean'", "'Char'", "'Map'", "'<'", "'>'", "','", "'='", "'new'", "'HashMap'", 
		"'('", "')'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "MAP", "FB", 
		"LB", "COMMA", "EQUAL", "NEW", "HASHMAP", "LP", "RP", "SEMICOLON", "IDENTIFIER", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MapParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MapParserParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MapParserParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MapParserParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MAP() { return GetToken(MapParserParser.MAP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Fb1Context fb1() {
			return GetRuleContext<Fb1Context>(0);
		}
		public MapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_map; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitMap(this);
		}
	}

	[RuleVersion(0)]
	public MapContext map() {
		MapContext _localctx = new MapContext(Context, State);
		EnterRule(_localctx, 0, RULE_map);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(MAP);
			State = 39;
			fb1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fb1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FB() { return GetToken(MapParserParser.FB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Datatype1Context datatype1() {
			return GetRuleContext<Datatype1Context>(0);
		}
		public Fb1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fb1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterFb1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitFb1(this);
		}
	}

	[RuleVersion(0)]
	public Fb1Context fb1() {
		Fb1Context _localctx = new Fb1Context(Context, State);
		EnterRule(_localctx, 2, RULE_fb1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			Match(FB);
			State = 42;
			datatype1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Datatype1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Comma1Context comma1() {
			return GetRuleContext<Comma1Context>(0);
		}
		public Datatype1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datatype1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterDatatype1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitDatatype1(this);
		}
	}

	[RuleVersion(0)]
	public Datatype1Context datatype1() {
		Datatype1Context _localctx = new Datatype1Context(Context, State);
		EnterRule(_localctx, 4, RULE_datatype1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			dataType();
			State = 45;
			comma1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comma1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(MapParserParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Datatype2Context datatype2() {
			return GetRuleContext<Datatype2Context>(0);
		}
		public Comma1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comma1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterComma1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitComma1(this);
		}
	}

	[RuleVersion(0)]
	public Comma1Context comma1() {
		Comma1Context _localctx = new Comma1Context(Context, State);
		EnterRule(_localctx, 6, RULE_comma1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			Match(COMMA);
			State = 48;
			datatype2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Datatype2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lb1Context lb1() {
			return GetRuleContext<Lb1Context>(0);
		}
		public Datatype2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datatype2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterDatatype2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitDatatype2(this);
		}
	}

	[RuleVersion(0)]
	public Datatype2Context datatype2() {
		Datatype2Context _localctx = new Datatype2Context(Context, State);
		EnterRule(_localctx, 8, RULE_datatype2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			dataType();
			State = 51;
			lb1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lb1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LB() { return GetToken(MapParserParser.LB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public Lb1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lb1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterLb1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitLb1(this);
		}
	}

	[RuleVersion(0)]
	public Lb1Context lb1() {
		Lb1Context _localctx = new Lb1Context(Context, State);
		EnterRule(_localctx, 10, RULE_lb1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			Match(LB);
			State = 54;
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MapParserParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RavnoContext ravno() {
			return GetRuleContext<RavnoContext>(0);
		}
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitName(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(Context, State);
		EnterRule(_localctx, 12, RULE_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(IDENTIFIER);
			State = 57;
			ravno();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RavnoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(MapParserParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewContext @new() {
			return GetRuleContext<NewContext>(0);
		}
		public RavnoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ravno; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterRavno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitRavno(this);
		}
	}

	[RuleVersion(0)]
	public RavnoContext ravno() {
		RavnoContext _localctx = new RavnoContext(Context, State);
		EnterRule(_localctx, 14, RULE_ravno);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(EQUAL);
			State = 60;
			@new();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NewContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEW() { return GetToken(MapParserParser.NEW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HashmapContext hashmap() {
			return GetRuleContext<HashmapContext>(0);
		}
		public NewContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_new; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterNew(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitNew(this);
		}
	}

	[RuleVersion(0)]
	public NewContext @new() {
		NewContext _localctx = new NewContext(Context, State);
		EnterRule(_localctx, 16, RULE_new);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(NEW);
			State = 63;
			hashmap();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HashmapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASHMAP() { return GetToken(MapParserParser.HASHMAP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Fb2Context fb2() {
			return GetRuleContext<Fb2Context>(0);
		}
		public HashmapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hashmap; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterHashmap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitHashmap(this);
		}
	}

	[RuleVersion(0)]
	public HashmapContext hashmap() {
		HashmapContext _localctx = new HashmapContext(Context, State);
		EnterRule(_localctx, 18, RULE_hashmap);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(HASHMAP);
			State = 66;
			fb2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fb2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FB() { return GetToken(MapParserParser.FB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Datatype3Context datatype3() {
			return GetRuleContext<Datatype3Context>(0);
		}
		public Fb2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fb2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterFb2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitFb2(this);
		}
	}

	[RuleVersion(0)]
	public Fb2Context fb2() {
		Fb2Context _localctx = new Fb2Context(Context, State);
		EnterRule(_localctx, 20, RULE_fb2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(FB);
			State = 69;
			datatype3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Datatype3Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Comma2Context comma2() {
			return GetRuleContext<Comma2Context>(0);
		}
		public Datatype3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datatype3; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterDatatype3(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitDatatype3(this);
		}
	}

	[RuleVersion(0)]
	public Datatype3Context datatype3() {
		Datatype3Context _localctx = new Datatype3Context(Context, State);
		EnterRule(_localctx, 22, RULE_datatype3);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			dataType();
			State = 72;
			comma2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comma2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(MapParserParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Datatype4Context datatype4() {
			return GetRuleContext<Datatype4Context>(0);
		}
		public Comma2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comma2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterComma2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitComma2(this);
		}
	}

	[RuleVersion(0)]
	public Comma2Context comma2() {
		Comma2Context _localctx = new Comma2Context(Context, State);
		EnterRule(_localctx, 24, RULE_comma2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(COMMA);
			State = 75;
			datatype4();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Datatype4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lb2Context lb2() {
			return GetRuleContext<Lb2Context>(0);
		}
		public Datatype4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_datatype4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterDatatype4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitDatatype4(this);
		}
	}

	[RuleVersion(0)]
	public Datatype4Context datatype4() {
		Datatype4Context _localctx = new Datatype4Context(Context, State);
		EnterRule(_localctx, 26, RULE_datatype4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			dataType();
			State = 78;
			lb2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lb2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LB() { return GetToken(MapParserParser.LB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LpContext lp() {
			return GetRuleContext<LpContext>(0);
		}
		public Lb2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lb2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterLb2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitLb2(this);
		}
	}

	[RuleVersion(0)]
	public Lb2Context lb2() {
		Lb2Context _localctx = new Lb2Context(Context, State);
		EnterRule(_localctx, 28, RULE_lb2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(LB);
			State = 81;
			lp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LP() { return GetToken(MapParserParser.LP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RpContext rp() {
			return GetRuleContext<RpContext>(0);
		}
		public LpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterLp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitLp(this);
		}
	}

	[RuleVersion(0)]
	public LpContext lp() {
		LpContext _localctx = new LpContext(Context, State);
		EnterRule(_localctx, 30, RULE_lp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(LP);
			State = 84;
			rp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RP() { return GetToken(MapParserParser.RP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SemicolonContext semicolon() {
			return GetRuleContext<SemicolonContext>(0);
		}
		public RpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterRp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitRp(this);
		}
	}

	[RuleVersion(0)]
	public RpContext rp() {
		RpContext _localctx = new RpContext(Context, State);
		EnterRule(_localctx, 32, RULE_rp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(RP);
			State = 87;
			semicolon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SemicolonContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(MapParserParser.SEMICOLON, 0); }
		public SemicolonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_semicolon; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterSemicolon(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitSemicolon(this);
		}
	}

	[RuleVersion(0)]
	public SemicolonContext semicolon() {
		SemicolonContext _localctx = new SemicolonContext(Context, State);
		EnterRule(_localctx, 34, RULE_semicolon);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DataTypeContext : ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dataType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.EnterDataType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapParserListener typedListener = listener as IMapParserListener;
			if (typedListener != null) typedListener.ExitDataType(this);
		}
	}

	[RuleVersion(0)]
	public DataTypeContext dataType() {
		DataTypeContext _localctx = new DataTypeContext(Context, State);
		EnterRule(_localctx, 36, RULE_dataType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1022L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
